--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </div>
       </div>
       <div class="header__nav">
-        <a href="#" class="link">Daily</a>
-        <a href="" class="link current_link">Weekly</a>
-        <a href="" class="link">Monthly</a>
+        <a href="#" class="link daily">Daily</a>
+        <a href="#" class="link weekly current_link">Weekly</a>
+        <a href="#" class="link monthly">Monthly</a>
       </div>
     </header> 
     <main class="main">
@@ -33,13 +33,13 @@
         <div class="task__content">
           <div class="task_left">
             <p class="task_name">Work</p>
-            <h2 class="task_time">32hrs</h2>
+            <h2 class="current_task_time">32hrs</h2>
           </div>
           <div class="task_right">
             <button class="btn">
               <img src="./images/icon-ellipsis.svg" alt="">
             </button>
-            <p class="previous">Last week - 36hrs</p>
+            <p class="previous">Last week - <span class="previous_task_time">36hrs</span></p>
           </div>
         </div>
       </div>
@@ -50,13 +50,13 @@
         <div class="task__content">
           <div class="task_left">
             <p class="task_name">Play</p>
-            <h2 class="task_time">10hrs</h2>
+            <h2 class="current_task_time">10hrs</h2>
           </div>
           <div class="task_right">
             <button class="btn">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
-            <p class="previous">Last week - 8hrs</p>
+            <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
           </div>
         </div>
       </div>
@@ -67,13 +67,13 @@
         <div class="task__content">
           <div class="task_left">
             <p class="task_name">Study</p>
-            <h2 class="task_time">4hrs</h2>
+            <h2 class="current_task_time">4hrs</h2>
           </div>
           <div class="task_right">
             <button class="btn">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
-            <p class="previous">Last week - 7hrs</p>
+            <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
           </div>
         </div>
       </div>
@@ -84,13 +84,13 @@
         <div class="task__content">
           <div class="task_left">
             <p class="task_name">Exercise</p>
-            <h2 class="task_time">4hrs</h2>
+            <h2 class="current_task_time">4hrs</h2>
           </div>
           <div class="task_right">
             <button class="btn">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
-            <p class="previous">Last week - 5hrs</p>
+            <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
           </div>
         </div>
       </div>
@@ -101,13 +101,13 @@
         <div class="task__content">
           <div class="task_left">
             <p class="task_name">Social</p>
-            <h2 class="task_time">5hrs</h2>
+            <h2 class="current_task_time">5hrs</h2>
           </div>
           <div class="task_right">
             <button class="btn">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
-            <p class="previous">Last week - 10hrs</p>
+            <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
           </div>
         </div>
       </div>
@@ -118,13 +118,13 @@
         <div class="task__content">
           <div class="task_left">
             <p class="task_name">Self Care</p>
-            <h2 class="task_time">5hrs</h2>
+            <h2 class="current_task_time">5hrs</h2>
           </div>
           <div class="task_right">
             <button class="btn">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
-            <p class="previous">Last week - 10hrs</p>
+            <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
           </div>
         </div>
       </div>
