Add aria-label to buttons without text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h2 class="current_task_time">32hrs</h2>
           </div>
           <div class="task_right">
-            <button class="btn">
+            <button class="btn" aria-label="ellipsis">
               <img src="./images/icon-ellipsis.svg" alt="">
             </button>
             <p class="previous">Last week - <span class="previous_task_time">36hrs</span></p>
@@ -53,7 +53,7 @@
             <h2 class="current_task_time">10hrs</h2>
           </div>
           <div class="task_right">
-            <button class="btn">
+            <button class="btn" aria-label="ellipsis">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
             <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
@@ -70,7 +70,7 @@
             <h2 class="current_task_time">4hrs</h2>
           </div>
           <div class="task_right">
-            <button class="btn">
+            <button class="btn" aria-label="ellipsis">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
             <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
@@ -87,7 +87,7 @@
             <h2 class="current_task_time">4hrs</h2>
           </div>
           <div class="task_right">
-            <button class="btn">
+            <button class="btn" aria-label="ellipsis">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
             <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
@@ -104,7 +104,7 @@
             <h2 class="current_task_time">5hrs</h2>
           </div>
           <div class="task_right">
-            <button class="btn">
+            <button class="btn" aria-label="ellipsis">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
             <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
@@ -121,7 +121,7 @@
             <h2 class="current_task_time">5hrs</h2>
           </div>
           <div class="task_right">
-            <button class="btn">
+            <button class="btn" aria-label="ellipsis">
               <img src="./images/icon-ellipsis.svg" alt="" class="ellipsis_icon">
             </button>
             <p class="previous">Last week - <span class="previous_task_time">8hrs</span></p>
